2014-01-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.target/i386/avx512f-vcmppd-2.c: Add -std=c99.
	Require c99_runtime.
	* gcc.target/i386/avx512f-vcmpps-2.c: Likewise.

	* gcc.target/i386/avx512f-vfixupimmpd-2.c: Add -std=gnu99.
	Require c99_runtime.
	* gcc.target/i386/avx512f-vfixupimmps-2.c: Likewise.
	* gcc.target/i386/avx512f-vfixupimmsd-2.c: Likewise.
	* gcc.target/i386/avx512f-vfixupimmss-2.c: Likewise.

	* gcc.target/i386/avx512f-vgetmantpd-2.c: Add -std=c99.
	Require c99_runtime.
	Make CALC void static.
	* gcc.target/i386/avx512f-vgetmantps-2.c: Likewise.

	* gcc.target/i386/avx512f-vgetmantsd-2.c: Add -std=c99.
	Require c99_runtime.
	* gcc.target/i386/avx512f-vgetmantss-2.c: Likewise.

2014-01-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.target/i386/pr59501-1.c: Require avx effective target.
	* gcc.target/i386/pr59501-2.c: Likewise.
	* gcc.target/i386/pr59501-3.c: Likewise.
	* gcc.target/i386/pr59501-4.c: Likewise.
	* gcc.target/i386/pr59501-5.c: Likewise.
	* gcc.target/i386/pr59501-6.c: Likewise.

2014-01-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.target/i386/pr59390.c: Replace math.h by fma declaration.
	* gcc.target/i386/pr59390_1.c: Likewise.
	* gcc.target/i386/pr59390_2.c: Likewise.

2014-01-06  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/pr59350.c: Tweak.
	* gcc.dg/pr59350-2.c: New test.
	* g++.dg/pr59510.C: Likewise.

2014-01-06  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59023
	* gfortran.dg/bind_c_procs_2.f90: New.

2014-01-05  John David Anglin  <danglin@gcc.gnu.org>

	* gcc.dg/tree-ssa/reassoc-33.c: Don't run on hppa*-*-*.
	* gcc.dg/tree-ssa/reassoc-34.c: Likewise.
	* gcc.dg/tree-ssa/reassoc-35.c: Likewise.
	* gcc.dg/tree-ssa/reassoc-36.c: Likewise.
	* gcc.dg/tree-ssa/forwprop-28.c: Skip compile on hppa*-*-*.
	* gcc.dg/tree-ssa/vrp47.c: Likewise.
	* gcc.dg/tree-ssa/vrp87.c: Likewise.

2014-01-04  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/arm/neon-nested-apcs.c: New test.
