@@ -1,5 +1,10 @@
 2014-01-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
+	* gcc.dg/vect/vect.exp: Add clearcap_ldflags to DEFAULT_VECTCFLAGS
+	if supported.
+
+2014-01-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
 	* gcc.target/i386/avx512f-vcmppd-2.c: Add -std=c99.
 	Require c99_runtime.
 	* gcc.target/i386/avx512f-vcmpps-2.c: Likewise.
